Allow checking of `null` keys with maps that do not allow them
See #2379 and #2382.