@@ -40,6 +40,7 @@ import org.apache.commons.collections4.map.CaseInsensitiveMap;
 import org.apache.commons.collections4.map.SingletonMap;
 import org.apache.commons.lang3.ArrayUtils;
 import org.assertj.core.internal.MapsBaseTest;
+import org.assertj.core.test.jdk11.Jdk11;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
@@ -101,7 +102,9 @@ class Maps_assertContainsOnlyKeys_Test extends MapsBaseTest {
                      arguments(unmodifiableMap(mapOf(entry("name", "Yoda"), entry("job", "Jedi"))), array("name", "job")),
                      arguments(unmodifiableMap(mapOf(entry("name", "Yoda"), entry("job", "Jedi"))), array("job", "name")),
                      arguments(ImmutableMap.of("name", "Yoda", "job", "Jedi"), array("name", "job")),
-                     arguments(ImmutableMap.of("name", "Yoda", "job", "Jedi"), array("job", "name")));
+                     arguments(ImmutableMap.of("name", "Yoda", "job", "Jedi"), array("job", "name")),
+                     arguments(Jdk11.Map.of("name", "Yoda", "job", "Jedi"), array("name", "job")),
+                     arguments(Jdk11.Map.of("name", "Yoda", "job", "Jedi"), array("job", "name")));
   }
 
   private static Stream<Arguments> modifiableMapsSuccessfulTestCases() {
@@ -160,7 +163,15 @@ class Maps_assertContainsOnlyKeys_Test extends MapsBaseTest {
                      arguments(ImmutableMap.of("name", "Yoda", "job", "Jedi"),
                                array("name", "color"),
                                set("color"),
-                               set("job")));
+                               set("job")),
+                     arguments(Jdk11.Map.of("name", "Yoda", "job", "Jedi"),
+                               array("name", "color"),
+                               set("color"),
+                               set("job")),
+                     arguments(Jdk11.Map.of("name", "Yoda", "job", "Jedi"),
+                               array((String) null), // implementation not permitting null keys
+                               set((String) null),
+                               set("name", "job")));
   }
 
   private static Stream<Arguments> modifiableMapsFailureTestCases() {
